// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`babel should extract static styles 1`] = `
"import { calculateStyles } from \\"openland-x-styles/calculateStyles\\";
import \\"/Users/steve/Develop/mentaljs/node_modules/.cache/mentaljs/styles/css-2hbptg.css\\";
export class Bar extends React.Component {
  render() {
    let a = 1;
    return <XView marginTop={a} __styleClassName=\\"css-2hbptg\\">
                            Hello!
                        </XView>;
  }

}"
`;

exports[`babel should replace with static div for static-only views 1`] = `
"import { calculateStyles } from \\"openland-x-styles/calculateStyles\\";
import \\"/Users/steve/Develop/mentaljs/node_modules/.cache/mentaljs/styles/css-1sfmjf6.css\\";
export class Bar extends React.Component {
  render() {
    return <div className=\\"css-1sfmjf6\\">
                            Hello!
                        </div>;
  }

}"
`;
